--- a/config/database.yml
+++ b/config/database.yml
@@ -9,9 +9,15 @@ default: &default
   pool: 5
   timeout: 5000
 
+#development:
+#  <<: *default
+#  database: db/development.sqlite3
+
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: skyraga_development
+  pool: 5
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
